--- a/index.html
+++ b/index.html
@@ -1,3 +1,14 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="styles.css">
+  <title>Document</title>
+</head>
+<body>
+  
 <div id="page-wrapper">  
   <header id="header">
     <div class="logo">
@@ -129,3 +140,6 @@ href="#eco">Eco Friendly</a></li>
   </div>
 </div>
   
+
+</body>
+</html>
